Added loading dplyr library and knitting now

--- a/R/MonthlyReportAndTables/3_buildMonthlyReport.Rmd
+++ b/R/MonthlyReportAndTables/3_buildMonthlyReport.Rmd
@@ -14,6 +14,7 @@ library(knitr) # Creating documents
 library(flextable) # Nicely formatted tables
 library(rworldmap) # World map
 library(ggplot2) # Creating plots
+library(dplyr) # Processing data
 
 # Note the repository location
 repository <- file.path("..", "..")
